--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@lottiefiles/dotlottie-react": "^0.17.13",
     "@lottiefiles/react-lottie-player": "^3.6.0",
+    "antd": "^6.2.3",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "motion": "^12.26.2",
